--- a/index-default.html
+++ b/index-default.html
@@ -71,7 +71,7 @@
 				<li><hr><p>HQ: 650 Madison Avenue<br> New York,<br> NY 10022<br> info@trustworthinternational.com<br>Tel: (123) 234574</p></li>
 				<li>
 					<div class="profile-social-wrapper text-center">
-						<div class="link" data-href="#">
+						<div class="link" data-href="https://twitter.com/TrustworthInte1">
 							<div class="cube twitter">
 								<div class="front">
 									<i class="fa fa-twitter"></i>
@@ -81,7 +81,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="link" data-href="#">
+						<div class="link" data-href="https://www.facebook.com/Trustworth-International-106254991150830/">
 							<div class="cube facebook">
 								<div class="front">
 									<i class="fa fa-facebook"></i>
@@ -91,7 +91,7 @@
 								</div>
 							</div>
 						</div>								
-						<div class="link" data-href="#">
+						<div class="link" data-href="mailto:info@trustworthinternational.com">
 							<div class="cube gplus">
 								<div class="front">
 									<i class="fa fa-google-plus"></i>
@@ -835,7 +835,7 @@
 								         					
 						<hr>	
 						<div class="profile-social-wrapper text-left">
-							<div data-href="#" class="link">
+							<div data-href="https://twitter.com/TrustworthInte1" class="link">
 								<div class="cube twitter">
 									<div class="front">
 										<i class="fa fa-twitter"></i>
@@ -845,7 +845,7 @@
 									</div>
 								</div>
 							</div>
-							<div data-href="#" class="link">
+							<div data-href="https://www.facebook.com/Trustworth-International-106254991150830/" class="link">
 								<div class="cube facebook">
 									<div class="front">
 										<i class="fa fa-facebook"></i>
@@ -855,7 +855,7 @@
 									</div>
 								</div>
 							</div>								
-							<div data-href="#" class="link">
+							<div data-href="mailto:info@trustworthinternational.com" class="link">
 								<div class="cube gplus">
 									<div class="front">
 										<i class="fa fa-google-plus"></i>
@@ -939,10 +939,10 @@
 				<div class="row text-center position-rel">
 					<div class="container"> 
 						<div class="col-lg-12 text-center section-title">
-							<h2>Join Us Now</h2>
-							<p class="lead">If you'd like to work with creatives, professionals and people who will exceed your expectation,<br> we'd love to hear from you, so don't hesitate to mail us your resume.</p>
-							<a href="#">
-								<i class="fa fa-play-circle"></i>
+							<h2>9Planet Solutions</h2>
+							<p class="lead">We love to hire creative and talented profesionals, so to that we work with 9Planet Solutions our official recruitment partner.<br> If you think you got what it takes to work with us mail thyem your resume now.</p>
+							<a href="mailto:jobs@trustworthinternational.com">
+								<i class="fa fa-paper-plane" aria-hidden="true" style="font-size: 100px;"></i>
 							</a>
 						</div>
 					</div>
