--- a/index-default.html
+++ b/index-default.html
@@ -72,6 +72,7 @@
 				<li>
 					<div class="profile-social-wrapper text-center">
 						<div class="link" data-href="https://twitter.com/TrustworthInte1">
+							<a href="https://twitter.com/TrustworthInte1">
 							<div class="cube twitter">
 								<div class="front">
 									<i class="fa fa-twitter"></i>
@@ -80,8 +81,10 @@
 									<i class="fa fa-twitter"></i>
 								</div>
 							</div>
+						</a>
 						</div>
 						<div class="link" data-href="https://www.facebook.com/Trustworth-International-106254991150830/">
+							<a href="https://www.facebook.com/Trustworth-International-106254991150830/">
 							<div class="cube facebook">
 								<div class="front">
 									<i class="fa fa-facebook"></i>
@@ -90,8 +93,10 @@
 									<i class="fa fa-facebook"></i>
 								</div>
 							</div>
+						</a>
 						</div>								
 						<div class="link" data-href="mailto:info@trustworthinternational.com">
+							<a href="mailto:info@trustworthinternational.com">
 							<div class="cube gplus">
 								<div class="front">
 									<i class="fa fa-google-plus"></i>
@@ -100,6 +105,7 @@
 									<i class="fa fa-google-plus"></i>
 								</div>
 							</div>
+						</a>
 						</div>								
 					</div>
 				</li>
@@ -836,6 +842,7 @@
 						<hr>	
 						<div class="profile-social-wrapper text-left">
 							<div data-href="https://twitter.com/TrustworthInte1" class="link">
+								<a href="https://twitter.com/TrustworthInte1">
 								<div class="cube twitter">
 									<div class="front">
 										<i class="fa fa-twitter"></i>
@@ -844,8 +851,10 @@
 										<i class="fa fa-twitter"></i>
 									</div>
 								</div>
+								</a>
 							</div>
 							<div data-href="https://www.facebook.com/Trustworth-International-106254991150830/" class="link">
+								<a href="https://www.facebook.com/Trustworth-International-106254991150830/">
 								<div class="cube facebook">
 									<div class="front">
 										<i class="fa fa-facebook"></i>
@@ -854,8 +863,10 @@
 										<i class="fa fa-facebook"></i>
 									</div>
 								</div>
+							</a>
 							</div>								
 							<div data-href="mailto:info@trustworthinternational.com" class="link">
+								<a href="mailto:info@trustworthinternational.com">
 								<div class="cube gplus">
 									<div class="front">
 										<i class="fa fa-google-plus"></i>
@@ -864,6 +875,7 @@
 										<i class="fa fa-google-plus"></i>
 									</div>
 								</div>
+								</a>
 							</div>								
 						</div>
 						<hr>
