--- a/index-default.html
+++ b/index-default.html
@@ -68,7 +68,7 @@
 				<li><a href="#clients">Our Clients</a></li>
 				<li><a href="#testimonials">Testimonials</a></li>
 				<li><a href="#contact-adderss">Contact us</a></li>
-				<li><hr><p>HQ: 650 Madison Avenue<br> New York,<br> NY 10022<br> info@trustworthinternational.com<br>Tel: (123) 234574</p></li>
+				<li><hr><p>HQ: 650 Madison Avenue<br> New York,<br> NY 10022<br> info@trustworthinternational.com<br>Tel: (+1) 8639998807</p></li>
 				<li>
 					<div class="profile-social-wrapper text-center">
 						<div class="link" data-href="https://twitter.com/TrustworthInte1">
@@ -837,7 +837,7 @@
                     </div>
 					<div class="col-md-6 col-contact-form ">
 						<h4><i class="fa fa-map-marker"></i> <small>Send us a postcard</small></h4>          
-						<p class="lead"><strong>HQ.</strong> 650 Madison Avenue New York, NY 10022<br><strong>P.</strong> (000) 123 45325 <br> <strong>E.</strong> info@trustworthinternational.com</p>
+						<p class="lead"><strong>HQ.</strong> 650 Madison Avenue New York, NY 10022<br><strong>P.</strong> (+1) 8639998807 <br> <strong>E.</strong> info@trustworthinternational.com</p>
 								         					
 						<hr>	
 						<div class="profile-social-wrapper text-left">
