--- a/index-default.html
+++ b/index-default.html
@@ -951,8 +951,8 @@
 				<div class="row text-center position-rel">
 					<div class="container"> 
 						<div class="col-lg-12 text-center section-title">
-							<h2>9Planet Solutions</h2>
-							<p class="lead">We love to hire creative and talented profesionals, so to that we work with 9Planet Solutions our official recruitment partner.<br> If you think you got what it takes to work with us mail thyem your resume now.</p>
+							<h2>Future Development</h2>
+							<p class="lead">We love to hire creative and talented profesionals, so to that we work with Future Development our official recruitment partner.<br> If you think you got what it takes to work with us mail thyem your resume now.</p>
 							<a href="mailto:jobs@trustworthinternational.com">
 								<i class="fa fa-paper-plane" aria-hidden="true" style="font-size: 100px;"></i>
 							</a>
