--- a/index-default.html
+++ b/index-default.html
@@ -69,7 +69,7 @@
 				<li><a href="#companies">Our Companies</a></li>
 				<li><a href="#testimonials">Testimonials</a></li>
 				<li><a href="#contact-adderss">Contact us</a></li>
-				<li><hr><p>HQ: 650 Madison Avenue<br> New York,<br> NY 10022<br> info@trustworthinternational.com<br>Tel: (+1) 8639998807</p></li>
+				<li><hr><p>HQ: 650 Madison Avenue<br> New York,<br> NY 10022<br> care@trustworthinternational.com<br>Tel: (+1) 8639998807</p></li>
 				<li>
 					<div class="profile-social-wrapper text-center">
 						<div class="link" data-href="https://twitter.com/TrustworthInte1">
@@ -96,8 +96,8 @@
 							</div>
 						</a>
 						</div>								
-						<div class="link" data-href="mailto:info@trustworthinternational.com">
-							<a href="mailto:info@trustworthinternational.com">
+						<div class="link" data-href="mailto:care@trustworthinternational.com">
+							<a href="mailto:care@trustworthinternational.com">
 							<div class="cube gplus">
 								<div class="front">
 									<i class="fa fa-google-plus"></i>
@@ -925,7 +925,7 @@
                     </div>
 					<div class="col-md-6 col-contact-form ">
 						<h4><i class="fa fa-map-marker"></i> <small>Send us a postcard</small></h4>          
-						<p class="lead"><strong>HQ.</strong> 650 Madison Avenue New York, NY 10022<br><strong>P.</strong> (+1) 8639998807 <br> <strong>E.</strong> info@trustworthinternational.com</p>
+						<p class="lead"><strong>HQ.</strong> 650 Madison Avenue New York, NY 10022<br><strong>P.</strong> (+1) 8639998807 <br> <strong>E.</strong> care@trustworthinternational.com</p>
 								         					
 						<hr>	
 						<div class="profile-social-wrapper text-left">
@@ -953,8 +953,8 @@
 								</div>
 							</a>
 							</div>								
-							<div data-href="mailto:info@trustworthinternational.com" class="link">
-								<a href="mailto:info@trustworthinternational.com">
+							<div data-href="mailto:care@trustworthinternational.com" class="link">
+								<a href="mailto:care@trustworthinternational.com">
 								<div class="cube gplus">
 									<div class="front">
 										<i class="fa fa-google-plus"></i>
