--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<li><a href="#companies">Our Companies</a></li>
 				<li><a href="#testimonials">Testimonials</a></li>
 				<li><a href="#contact-adderss">Contact us</a></li>
-				<li><a href="/career-check">Check status of your career application</a></li>
+				<li><a href="https://trustworthjobapplication.herokuapp.com/polls">Check status of your career application</a></li>
 				<li><hr><p>HQ: 650 Madison Avenue<br> New York,<br> NY 10022<br> care@trustworthinternational.com<br>Tel: (+1) 8639998807</p></li>
 				<li>
 					<div class="profile-social-wrapper text-center">
