--- a/index-home5.html
+++ b/index-home5.html
@@ -1572,14 +1572,15 @@ function appmateOptionSelect(el){
         
  
 
-            <a class="info_item info_item-1" href="https://humanmade.jp/collections/cut-and-sewn/products/satin-pullover">
-              <div class="info_num">HM21-CS-014</div>
-              <div class="info_name">WHITE HOODIE</div>
-            </a>
+            <div class="info_item info_item-3">
+              <div class="info_num">HM21-PT-005</div>
+              <div class="info_name">WHITE HOODIE/div>
+            </div>
+ 
 
 
-            <div class="info_item info_item-1">
-              <div class="info_num">HM21-CS-014</div>
+            <div class="info_item info_item-4">
+              <div class="info_num">HM21-CS-012</div>
               <a class="info_name" style="color:  #fc6b32;" href="https://supportalldreams.org/products/white-hoodie">View Product</a>
             </div>
 
