--- a/index-home5.html
+++ b/index-home5.html
@@ -1646,16 +1646,16 @@ function appmateOptionSelect(el){
 
 
 
-            <a class="info_item info_item-1" href="https://humanmade.jp/collections/cut-and-sewn/products/hm21cs003">
-              <div class="info_num">HM21-CS-003</div>
-              <div class="info_name">STAND COLLAR SWEAT</div>
-            </a>
+            <div class="info_item info_item-1">
+              <div class="info_num">HM21-CS-001</div>
+              <div class="info_name">YELLOW HOODIE</div>
+            </div>
 
 
 
-            <div class="info_item info_item-3">
-              <div class="info_num">HM21-PT-002</div>
-              <div class="info_name">SWEAT PANTS</div>
+            <div class="info_item info_item-2">
+              <div class="info_name">HM21-CS-001</div>
+			  <a class="info_name" style="color:  #fc6b32;" href="https://supportalldreams.org/products/red-hoodie">View Product</a>
             </div>
 
 
@@ -1672,16 +1672,16 @@ function appmateOptionSelect(el){
 
 
 
-            <div class="info_item info_item-4">
-              <div class="info_num">HM21-JK-004</div>
-              <div class="info_name">MILITARY RAIN JACKET</div>
+            <div class="info_item info_item-1">
+              <div class="info_num">HM21-CS-001</div>
+              <div class="info_name">BLACK CREW T_SHIRT</div>
             </div>
 
 
 
-            <div class="info_item info_item-5">
-              <div class="info_num">HM21-PT-002</div>
-              <div class="info_name">SWEAT PANTS</div>
+            <div class="info_item info_item-2">
+              <div class="info_name">HM21-CS-001</div>
+			  <a class="info_name" style="color:  #fc6b32;" href="https://supportalldreams.org/products/red-hoodie">View Product</a>
             </div>
            
             
