--- a/index-home5.html
+++ b/index-home5.html
@@ -1705,7 +1705,7 @@ function appmateOptionSelect(el){
 
 
             <div class="info_item info_item-2">
-              <div class="info_name">SLIM CARGO PANTS</div>
+              <div class="info_name">HM21-CS-001</div>
 			  <a class="info_name" style="color:  #fc6b32;" href="https://supportalldreams.org/products/red-hoodie">View Product</a>
             </div>
 
