--- a/index-home5.html
+++ b/index-home5.html
@@ -1749,7 +1749,7 @@ function appmateOptionSelect(el){
 
             <div class="info_item info_item-3">
               <div class="info_num">HM21-PT-009</div>
-              <div class="info_name">RED SUPPORT ALL DREAMS T-SHIRT</div>
+              <div class="info_name">WE ALL HAVE DREAMS BLACK CREW NECK</div>
             </div>
            
 
