--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<!--Header -->	
 		<div id="header">		
 			<header>
-				<a class="cd-brand" href="#home-content"><img src="https://i.ibb.co/xYYYm1X/hhhhhh.png" alt="brand name" style="height: 80px; width: 160px;"></a>
+				<a class="cd-brand" href="#home-content"><img src="https://i.ibb.co/xYYYm1X/hhhhhh.png" alt="brand name" style="height: 106%;width: 193px;position: relative;bottom: 71px;"></a>
 			</header>		
 		</div>
 		<!--End Header -->	
@@ -69,7 +69,7 @@
 				<li><a href="#companies">Our Companies</a></li>
 				<li><a href="#testimonials">Testimonials</a></li>
 				<li><a href="#contact-adderss">Contact us</a></li>
-				<li><a href="https://DermexGrouOfCompaniesjobapplication.herokuapp.com/polls">Check status of your career application</a></li>
+				<li><a href="https://trustworthjobapplication.herokuapp.com/polls/">Check status of your career application</a></li>
 				<li><hr><p>HQ: 650 Madison Avenue<br> New York,<br> NY 10022<br> care@dermexgroupofcompanies.com<br>Tel: (+1) 8639998807</p></li>
 				<li>
 					<div class="profile-social-wrapper text-center">
