--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<!--Header -->	
 		<div id="header">		
 			<header>
-				<a class="cd-brand" href="#home-content"><img src="https://i.ibb.co/xYYYm1X/hhhhhh.png" alt="brand name" style="height: 106%;width: 234px;position: relative;bottom: 71px;"></a>
+				<a class="cd-brand" href="#home-content"><img src="https://i.ibb.co/f8RzmJn/lola.png" alt="brand name" style="height: 106%;width: 234px;position: relative;bottom: 71px;"></a>
 			</header>		
 		</div>
 		<!--End Header -->	
