--- a/index.html
+++ b/index.html
@@ -823,8 +823,8 @@
 								<div class="se-block  clearfix">
 								  
 								  <div class="se-heading">
-										<h4>Integration Marketing And Communication Pte Ltd</h4>
-										<p> A Unit of Dermex Group Of Companies<br> 71 Neil Road, Singapore 088900</p>
+										<h4>Shallow Lagoon Rasdhoo</h4>
+										<p> A Unit of Dermex Group Of Companies<br> Rasdhoo, Maldives</p>
 									</div>
 								</div>
 							</div>							
@@ -834,8 +834,8 @@
 								<div class="se-block clearfix">
 																	  
 									<div class="se-heading">
-										<h4>Pasir Panjang Power Station</h4>
-										<p> A Unit of Dermex Group Of Companies<br> 27 Pasir Panjang Rd, Singapore 117537</p>
+										<h4>Farrer Park Medical Centre</h4>
+										<p> A Unit of Dermex Group Of Companies<br> 1 Farrer Park Station Rd, Singapore 217562</p>
 									</div>
 								</div>
 							</div>
